# controllers/users.js
@@ -1,72 +1,0 @@
-//...This is the controllers/users.js file...
-
-
-const mongodb = require('../data/database');
-const ObjectId = require('mongodb').ObjectId;
-
-const getAllUsers = async (req, res) => {
-    const result = await mongodb.getDatabase().db('project2').collection('users').find();
-    result.toArray().then((users) => {
-        res.setHeader('Content-Type', 'application/json');
-        res.status(200).json(users);
-    });
-};
-
-const getSingleUser = async (req, res) => {
-    const userId = new ObjectId(req.params.id);
-    const result = await mongodb.getDatabase().db('project2').collection('users').find({ _id: userId });
-    result.toArray().then((users) => {
-        res.setHeader('Content-Type', 'application/json');
-        res.status(200).json(users[0]);
-    });
-};
-
-const createUser = async (req, res) => {
-    //#swagger.tags=['Users']
-    const user = {
-        username: req.body.username,
-        password: req.body.password,
-    };
-
-    const response = await mongodb.getDatabase().db('project2').collection('users').insertOne(user);
-    if (response.acknowledged) {
-        res.status(204).send();
-    } else {
-        res.status(500).json(response.error || 'Some error occurred while creating the user.');
-    }
-};
-
-const updateUser = async (req, res) => {
-    //#swagger.tags=['Users']
-    const userId = new ObjectId(req.params.id);
-    const user = {
-        username: req.body.username,
-        password: req.body.password,
-    };
-
-    const response = await mongodb.getDatabase().db('project2').collection('users').replaceOne({ _id: userId }, user);
-    if (response.modifiedCount > 0) {
-        res.status(204).send();
-    } else {
-        res.status(500).json(response.error || 'Some error occurred while updating the user.');
-    }
-};
-
-const deleteUser = async (req, res) => {
-    //#swagger.tags=['Users']
-    const userId = new ObjectId(req.params.id);
-    const response = await mongodb.getDatabase().db('project2').collection('users').deleteOne({ _id: userId });
-    if (response.deletedCount > 0) {
-        res.status(204).send();
-    } else {
-        res.status(500).json(response.error || 'Some error occurred while deleting the user.');
-    }
-};
-
-module.exports = {
-    getAllUsers,
-    getSingleUser,
-    createUser,
-    updateUser,
-    deleteUser
-};
